Style: fix Column Shortcodes small screen spacing

--- a/style.css
+++ b/style.css
@@ -2357,7 +2357,7 @@ object {
 --------------------------------------------------------------*/
 
 #content .content-column {
-	margin-top: 1.5em;
+	margin: 1.5em 0 0 0;
 	padding: 0 17.5px;
 }
 
